--- a/public/drawio/viewer.html
+++ b/public/drawio/viewer.html
@@ -63,8 +63,64 @@
 	<div id="graph"></div>
 	<script type="text/javascript">
 		var graph = new Graph(document.getElementById('graph'));
-		graph.resizeContainer = true;
-		graph.setEnabled(false);
+		graph.resizeContainer = false;
+		graph.setEnabled(true);
+		graph.setCellsEditable(false);
+		graph.setCellsMovable(false);
+		graph.setCellsResizable(false);
+		graph.setCellsBendable(false);
+		graph.setCellsSelectable(false);
+		graph.setDropEnabled(false);
+		graph.setSplitEnabled(false);
+		graph.setConnectable(false);
+
+		var img = new mxImage('/drawio/images/comment.svg', 20, 20);
+
+		graph.addListener(mxEvent.CLICK, function(sender, evt) {
+			console.log(evt)
+			var e = evt.getProperty('event'); // mouse event
+			var cell = evt.getProperty('cell'); // cell may be null
+
+			if (cell != null)
+			{
+				// Do something useful with cell and consume the event
+				console.log('cell', cell);
+
+				var overlay = new mxCellOverlay(img, 'This is a comment', mxConstants.ALIGN_LEFT, mxConstants.ALIGN_TOP);
+				overlay.defaultOverlap = 0.7;
+				graph.addCellOverlay(cell, overlay);
+				overlay.addListener(mxEvent.CLICK, function(sender, evt) {
+					var cell = evt.getProperty('cell');
+					graph.setSelectionCell(cell);
+				});
+
+				evt.consume();
+			}
+		});
+
+		graph.popupMenuHandler.factoryMethod = function(menu, cell, evt) {
+			console.log(menu, cell, evt)
+			if(cell.edge){
+				menu.addItem('First edge option', null, function()
+				{ 
+					alert('This is the first option of edge ');
+				})
+				menu.addItem('Second edge option', null, function()
+				{
+					alert('This is the second option of edge ');
+				})
+			}
+			if(cell.vertex){
+				menu.addItem('First vertex option', null, function()
+				{
+					alert('This is the first option of vertex ');
+				})
+				menu.addItem('Second vertex option', null, function()
+				{
+					alert('This is the second option of vertex ');
+				})
+			}
+		}
 
 		function setGraphStyle(styleUrl)
 		{
@@ -80,6 +136,8 @@
 			var codec = new mxCodec(xmlDoc);
 			codec.decode(xmlDoc.documentElement, graph.getModel());
 		};
+
+		setGraphXml(`<mxGraphModel dx="1135" dy="370" grid="1" gridSize="10" guides="1" tooltips="1" connect="1" arrows="1" fold="1" page="1" pageScale="1" pageWidth="827" pageHeight="1169"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="" style="rounded=0;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="80" y="30" width="120" height="60" as="geometry"/></mxCell><mxCell id="4" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;entryX=1;entryY=0.5;entryDx=0;entryDy=0;" edge="1" parent="1" source="3" target="2"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="3" value="" style="ellipse;whiteSpace=wrap;html=1;aspect=fixed;" vertex="1" parent="1"><mxGeometry x="360" y="20" width="80" height="80" as="geometry"/></mxCell></root></mxGraphModel>`);
 
 		async function initializeMacro() {
 			const macro = new Macro(AP.confluence, 'graph');
@@ -98,7 +156,7 @@
 			}, 1000);
 		}
 
-		loadConnect(initializeMacro);
+		// loadConnect(initializeMacro);
 	</script>
 </body>
 </html>
