--- a/public/drawio/viewer.html
+++ b/public/drawio/viewer.html
@@ -26,7 +26,7 @@
 	<div id="graph"></div>
 	<button id="commentBtn">Add Comment</button>
 
-	<script type="text/javascript" src="js/viewer/graph.js"></script>
+	<script type="text/javascript" src="js/viewer/graph.js?v=3"></script>
 
 	<script type="text/javascript">
 		if (window !== window.top) {
