Store comments and use the atlassian comment component.

--- a/public/drawio/viewer.html
+++ b/public/drawio/viewer.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="src/js/mxClient.js"></script>
 	<script type="text/javascript" src="js/Graph.js"></script>
 	<script type="text/javascript" src="js/Shapes.js"></script>
-	<script type="text/javascript" src="js/viewer/macro.js"></script>
+	<script type="text/javascript" src="js/viewer/macro.js?v=2"></script>
 
 	<link rel="stylesheet" href="styles/viewer.css">
 </head>
@@ -25,8 +25,9 @@
 <body class="geEditor">
 	<div id="graph"></div>
 	<button id="commentBtn">Add Comment</button>
+  <div id="comment"></div>
 
-	<script type="text/javascript" src="js/viewer/graph.js?v=15"></script>
+	<script type="text/javascript" src="js/viewer/graph.js?v=22"></script>
 
 	<script type="text/javascript">
     loadConnect(initializeMacro);
