Show editing based on store.state.editing.

--- a/public/drawio/viewer.html
+++ b/public/drawio/viewer.html
@@ -26,6 +26,7 @@
 	<div id="graph"></div>
 	<button id="commentBtn">Add Comment</button>
   <div id="comment"></div>
+  <div id="comment-editor"></div>
 
 	<script type="text/javascript" src="js/viewer/graph.js?v=27"></script>
 
